# Raft

include/: RaftRPC.h  RaftServer.h  ThreadPool.h  raft.pb.h
proto/: CMakeLists.txt  raft.proto
src/: CMakeLists.txt  RaftRPC.cpp  RaftServer.cpp  ThreadPool.cpp  main.cpp  test
